# mdcrawler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TESTING.md  crawl_docs.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: generate_whitepaper.py
mdcrawler/: __init__.py  cli.py  combined_builder.py  content_extractor.py  crawler.py  fetcher.py  markdown_writer.py  title_normalizer.py
tests/: test_content_extractor.py  test_crawler.py  test_integration_app_code_page.py  test_markdown_writer.py
